Make the bubbles flat, hide them on mobile, fix the footer hight

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ html,body
 }
 
 // Height of footer to use
-$footer-height: 250px;
+$footer-height: 350px;
 
 .container-fluid
 {
